--- a/Kelime Ezber Sistemi/Kelime Ezber Sistemi.csproj
+++ b/Kelime Ezber Sistemi/Kelime Ezber Sistemi.csproj
@@ -39,13 +39,19 @@
     <Reference Include="DevExpress.BonusSkins.v20.1" />
     <Reference Include="DevExpress.Data.Desktop.v20.1" />
     <Reference Include="DevExpress.Data.v20.1" />
+    <Reference Include="DevExpress.Images.v20.1, Version=20.1.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+    <Reference Include="DevExpress.Office.v20.1.Core, Version=20.1.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+    <Reference Include="DevExpress.Pdf.v20.1.Core, Version=20.1.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+    <Reference Include="DevExpress.RichEdit.v20.1.Core, Version=20.1.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
     <Reference Include="DevExpress.Utils.v20.1" />
     <Reference Include="DevExpress.Sparkline.v20.1.Core" />
+    <Reference Include="DevExpress.XtraBars.v20.1, Version=20.1.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
     <Reference Include="DevExpress.XtraEditors.v20.1" />
     <Reference Include="DevExpress.Printing.v20.1.Core" />
     <Reference Include="DevExpress.XtraGrid.v20.1, Version=20.1.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
     <Reference Include="DevExpress.XtraLayout.v20.1, Version=20.1.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
     <Reference Include="DevExpress.XtraPrinting.v20.1, Version=20.1.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+    <Reference Include="DevExpress.XtraRichEdit.v20.1, Version=20.1.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
     <Reference Include="Google.Protobuf, Version=3.19.4.0, Culture=neutral, PublicKeyToken=a7d26565bac4d604, processorArchitecture=MSIL">
       <HintPath>..\packages\Google.Protobuf.3.19.4\lib\net45\Google.Protobuf.dll</HintPath>
     </Reference>
@@ -110,6 +116,12 @@
     <Compile Include="Form_KelimeEkle.Designer.cs">
       <DependentUpon>Form_KelimeEkle.cs</DependentUpon>
     </Compile>
+    <Compile Include="Form_SorunBildir.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form_SorunBildir.Designer.cs">
+      <DependentUpon>Form_SorunBildir.cs</DependentUpon>
+    </Compile>
     <Compile Include="Sqlbaglantisi.cs" />
     <Compile Include="Form_AnaSayfa.cs">
       <SubType>Form</SubType>
@@ -133,6 +145,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Form_KelimeÇalış.resx">
       <DependentUpon>Form_KelimeÇalış.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form_SorunBildir.resx">
+      <DependentUpon>Form_SorunBildir.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\licenses.licx" />
     <EmbeddedResource Include="Properties\Resources.resx">
